name:              fddp
version:           0.0.1
author:            Nikita Timofeev
build-type:        Simple
category:          Console
cabal-version:     >= 1.8

executable fddp
    main-is:       Main.hs
    other-modules: EitherT, Exceptions, FileCompare
    ghc-options:   -Wall -rtsopts -fllvm -O2
    build-depends: base, transformers, directory, filepath, enumerator
